Fixed height of the contact form so the footer wasn't covering it and chenged map height

--- a/css/contact.css
+++ b/css/contact.css
@@ -13,12 +13,12 @@ section {
 
 .contact-form-wrapper iframe {
     width: 80%;
-    height: 620px;
+    height: 650px;
 }
 
 .map-wrapper iframe {
     width: 90%;
-    height: 620px;
+    height: 650px;
     margin: 0 auto;
     display: block;
 }
